# oneAPI-samples

DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/bi_directional_mem_BW/: CMakeLists.txt  sample.json
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/bi_directional_mem_BW/src/: bi_directional_mem_BW.cpp  main.cpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/board_test/src/: CMakeLists.txt  board_test.cpp  board_test.hpp  helper.hpp  host_speed.hpp  usm.hpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/: CMakeLists.txt  README.md
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/.git.backup/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index  packed-refs
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/.git.backup/logs/: HEAD
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/.git.backup/logs/refs/heads/: main  move-to-device-code-work
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/.git.backup/logs/refs/remotes/origin/: HEAD  main  move-to-device-code-work
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/.git.backup/objects/pack/: pack-0e660afba3c7ed9a7cf6239a6917b32cb14f8455.idx  pack-0e660afba3c7ed9a7cf6239a6917b32cb14f8455.pack
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/.git.backup/refs/heads/: move-to-device-code-work
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/.git.backup/refs/remotes/origin/: main
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/include/: memory_utils.hpp  rom_base.hpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/qrcode/src/: decode.hpp  decode_fpga.hpp  identify.hpp  image_processing.hpp  qrcode_demo.cpp  qrcodes.hpp  quirc.hpp  version_db.hpp
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/usm_board_test/: CMakeLists.txt  sample.json
DirectProgramming/C++SYCL_FPGA/ReferenceDesigns/usm_board_test/src/: usm_board_test.cpp
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/experimental/host_pipes_ipa/: CMakeLists.txt  README.md
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/experimental/host_pipes_ipa/src/: host_pipes_with_sideband_signals.cpp
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/experimental/streaming_interfaces/: sample.json
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/experimental/streaming_interfaces_with_pipes/: README.md
DirectProgramming/C++SYCL_FPGA/Tutorials/Features/experimental/streaming_interfaces_with_pipes/src/: host_pipes.cpp  threshold_packets.cpp
